Fixed flickering of parts for authorized users (menu, log off button)

--- a/app/css/oasp.less
+++ b/app/css/oasp.less
@@ -70,3 +70,7 @@ body {
     .opacity(0);
   }
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
